@@ -160,6 +160,7 @@ rwtestAllXml() {
       rwtestXml testNoteheads.xml
       rwtestXml testNotesRests1.xml
       rwtestXml testNotesRests2.xml
+      rwtestXmlRef testPartsSpecialCases.xml
       rwtestXml testSystemBrackets1.xml
       rwtestXml testSystemBrackets2.xml
       rwtestXml testTempo1.xml
